--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jari">
 
+    <uses-permission android:name="android.permission.INTERNET" />              <!--반드시 추가-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>   <!--위치정보활용시 추가-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> <!--위치정보활용시 추가-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>      <!--WIFI 상태활용시 추가-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>      <!--WIFI 상태활용시 추가-->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_new_round"
         android:supportsRtl="true">
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="azqxoh0k6z" />
         <activity
             android:name=".LoginActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
