--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     // 네이버 지도 SDK
     implementation 'com.naver.maps:map-sdk:3.9.1'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
     // retrofit2 SDK
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
