--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     // Picasso 라이브러리
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // 회원가입 서버연결
+    implementation 'com.android.volley:volley:1.1.1'
 }
